<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_adjust_black_24dp"
        android:title="@string/title_forYou" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_nearme" />

    <item
        android:id="@+id/navigation_favourite"
        android:icon="@drawable/ic_favorite_black_24dp"
        android:title="@string/title_favourite" />

    <item
        android:id="@+id/navigation_drive"
        android:icon="@drawable/compass"
        android:title="@string/title_drive" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_perm_identity_black_24dp"
        android:title="@string/title_profile" />

   <!-- <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_more" />-->

</menu>
